[project]
name = "bili-latiao"
version = "0.1.0"
description = ""
authors = [
    {name = "狐日泽",email = "shdocter@nya-wsl.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyinstaller (>=6.14.2,<7.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
