[project]
name = "bili-latiao"
version = "0.1.0"
description = ""
authors = [{ name = "狐日泽", email = "shdocter@nya-wsl.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "qrcode (>=8.2,<9.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "requests (>=2.33.1,<3.0.0)",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
